fix: align nav menu items to the right in nav toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,8 @@ nav {
 
 /* Nav toggle */
 #nav-toggle:checked ~ nav {
-  display: block;
+  display: flex;
+  justify-content: end;
 }
 
 #nav-toggle {
